syntax = "proto3";

package finance;

option go_package = "github.com/urealaden/cova-cents/server/proto/budget";
import "common.proto";

message Budget {
    string id = 1;
    string category = 2;
    double maximum = 3;
    string theme = 4;
}

message AddBudgetRequest {
    Budget budget = 1;
}

message AddBudgetResponse {
    Budget budget = 1;
    finance.Status status = 2;
}

message GetBudgetsRequest {
    string filter = 1; // Optional filter by category
    int32 limit = 2;   // Maximum number of results
    int32 offset = 3;  // Offset for pagination
}

message GetBudgetsResponse {
    repeated Budget budgets = 1;    
    finance.Status status = 2;
}


message UpdateBudgetRequest{
    Budget budget = 1;    
}

message UpdateBudgetResponse {
    Budget budget = 1;
    finance.Status status = 2;
}

message DeleteBudgetRequest {
    string id = 1;
}

message DeleteBudgetResponse {    
    finance.Status status = 2;
}

